# scai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROJECT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  daily.yml  universe.yml
configs/: com.scai.daily.plist
data/: edgar_facts.parquet
data/models/: smallcap_v2_secrel20d.pkl  smallcap_v3_lambdarank.pkl
data/paper_trading/: daily_log.jsonl  model_registry.json  portfolio.json  signal_history.parquet  signals_2026-06-05.parquet  signals_2026-06-08.parquet  signals_2026-06-10.parquet  signals_2026-06-11.parquet  trades.parquet
data/processed/: smallcap_spy.parquet  smallcap_universe.parquet  ticker_catalog_v2.parquet
data/v3_benchmarks/: feature_importance.csv  v2_baseline.json  v3_hp_combo.json  v3_hp_leaves31.json  v3_hp_leaves63.json  v3_hp_lr05.json  v3_hp_minc100.json  v3_hp_minc30.json  v3_hp_reg2.json  v3_hp_trunc4.json  v3_lambdarank.json  v3_lean1.json  v3_lean2.json  v3_multi_horizon.json  v3_regime.json  v3_regime_sized.json  v3_sector_fix.json  v3_wr_adapt_stop.json  v3_wr_baseline_8.json  v3_wr_combo.json  v3_wr_gate_0.5¤â.json  v3_wr_gate_1.0¤â.json  v3_wr_gate_1.5¤â.json  v4_exit_adaptive6_be8.json  v4_exit_adaptive6_d3.json  v4_exit_adaptive6_d5.json  v4_exit_adaptive6_d8.json  v4_exit_adaptive6_pt25.json  v4_exit_adaptive6_pt40.json  v4_exit_adaptive6_ts15.json  v4_exit_adaptive8_d5.json  v4_exit_baseline_trail.json  v4_exit_be10.json  v4_exit_be5.json  v4_exit_be8.json  v4_exit_pt15.json  v4_exit_pt25.json  v4_exit_pt40.json  v4_exit_trail_12_20.json  v4_exit_trail_8_12.json  (+21 more)
docs/: DEPLOY_GITHUB.md  strategy.html
reports/: free_data_sources_plan.md  free_data_sources_quality.json  free_features_ic.json  v4_final_report.md
scripts/: _gen_pwa_icons.py  daily_pipeline.py  intraday_monitor.py  refresh_universe.py  render_static_dashboard.py  run_smallcap_pipeline.py
scripts/archived/: 01_baseline.py  02a_sector_enrich.py  03a_market_download.py  09_hp_search.py  11_regime_sizing.py  13_reset_paper_trading.py  14_wr_benchmarks.py  15_period_summary.py  16_reset_replay_paper.py  17_model_sanity_check.py  19_cooldown_analysis.py  99_summary.py  _cleanup.sh  _compare_meta.py  _fix_cooldown_seed.py  _hp_summary.py  eval_full_comparison.py
scripts/supabase/: schema.sql
scripts/v3/: 12_train_v3_production.py  18_verify_no_leak.py  20_filter_sweep.py  21_exit_sweep.py  22_feature_batches.py  23_model_variants.py  24_v4_report.py  _v3_harness.py
tests/: conftest.py  test_v2_improvements.py
(+71 files in other folders)
